# PPPModels

./: 404.html  README.md  index.html  prophet.py  pyproject.toml  sitemap.xml
docs/: examples.md
examples/: example1.py  index.html
methodology/: index.html
search/: search_index.json
src/pppmodels/: prophet.py
