[project]
name = "pppmodels"
version = "0.4.0"
description = "Add your description here"
authors = [
    { name = "galenseilis", email = "galen.seilis@seilis.ca" }
]
dependencies = [
    "pppmodels>=0.0.3",
    "pymc>=5.16.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pppmodels"]
